--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,8 +5,33 @@
     <title>慕思睡眠测试系统</title>
 </head>
 <body>
-    <div>
-        <p class="index">这里是测试首页</p>
+    <div class="index">
+        <div class="banner">
+            <img src="../images/1-index-pic.jpg" alt="">
+            <div class="word">
+                <p>我们一生大约有三分之一的时间是在床上度过，心
+                    里、生理和物理环境的共同作用会对睡眠的质量产生影
+                    响。好的睡眠从选择一款合适自己的床垫开始，输入您的
+                    数据进行测试，我们将帮您选择合适您的床垫。
+
+                </p>
+            </div>
+        </div>
+        <div class="sex">
+            <h1>请选择性别：</h1>
+            <div class="contain">
+                <div id="male" class="item left">
+                    <img src="../images/9-man.png" alt="">
+                    <i>男</i>
+                    <span class="noneSpan1"></span>
+                </div>
+                <div id="female" class="item right">
+                    <img src="../images/9-girl.png" alt="">
+                    <i>女</i>
+                    <span class="noneSpan2"></span>
+                </div>
+            </div>
+        </div>
     </div>
 <script src="/assets/commons.js"></script>
 <script src="/assets/index.bundle.js"></script>
