--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,17 +1,10 @@
-@20: 0.267rem;
-@30: 0.4rem;
-@40: 0.53rem;
-@50: 0.667rem;
-@60: 0.8rem;
-@70: 0.93rem;
-@100: 1.33rem;
-
+@import "common";
 .index{
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: #f2f6f9;
 }
 .banner{
