--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,6 +32,8 @@
                 </div>
             </div>
         </div>
+
+        <div id="footer"></div>
     </div>
 <script src="/assets/commons.js"></script>
 <script src="/assets/index.bundle.js"></script>
