--- a/src/views/hipline.html
+++ b/src/views/hipline.html
@@ -5,6 +5,48 @@
     <title>慕思睡眠测试系统</title>
 </head>
 <body>
+    <div class="hipline">
+        <div class="numStable">
+            <div class="num">
+                <p>07</p>
+            </div>
+            <div class="describe">
+                <h1>臀围</h1>
+                <span>Hipline</span>
+            </div>
+        </div>
 
+
+        <div class="main">
+            <div class="word">
+                <p>
+                    测量方法：双脚并拢站
+                    直，两臂自然下垂，不
+                    要收腹，呼吸保持平
+                    稳，皮尺围绕臀部最丰
+                    满处水平测量一周，松
+                    紧程度让皮尺能轻松转
+                    动为适宜，量出的尺寸
+                    即为臀围尺寸。
+                </p>
+                <div class="hiplineW">
+                    <span>臀围：</span>
+                    <input id="hiplineW" type="number">
+                    <span>cm</span>
+                </div>
+            </div>
+
+            <div class="img"><img src="../images/7-pic.png" alt=""></div>
+        </div>
+
+        <div class="decoration">
+            <span>-----------------------</span>
+        </div>
+
+        <div id="footer"></div>
+    </div>
+
+<script src="/assets/commons.js"></script>
+<script src="/assets/hipline.bundle.js"></script>
 </body>
 </html>
