--- a/src/views/waistline.html
+++ b/src/views/waistline.html
@@ -5,6 +5,50 @@
     <title>慕思睡眠测试系统</title>
 </head>
 <body>
+    <div class="waistline">
+        <div class="numStable">
+            <div class="num">
+                <p>06</p>
+            </div>
+            <div class="describe">
+                <h1>腰围</h1>
+                <span>Waistline</span>
+            </div>
+        </div>
 
+
+        <div class="main">
+            <div class="word">
+                <p>
+                    测量方法：双脚并拢站
+                    直，两臂自然下垂，不
+                    要收腹，呼吸保持平
+                    稳，皮尺围绕腰最细的
+                    部位（髋骨上，肋骨下
+                    最窄的部位），水平测
+                    量一周，让皮尺和身体
+                    之间有一个手指的位
+                    置，量出的尺寸即为腰
+                    围尺寸。
+                </p>
+                <div class="waistlineW">
+                    <span>腰围：</span>
+                    <input id="waistlineW" type="number">
+                    <span>cm</span>
+                </div>
+            </div>
+
+            <div class="img"><img src="../images/6-pic.png" alt=""></div>
+        </div>
+
+        <div class="decoration">
+            <span>-----------------------</span>
+        </div>
+
+        <div id="footer"></div>
+    </div>
+
+<script src="/assets/commons.js"></script>
+<script src="/assets/waistline.bundle.js"></script>
 </body>
 </html>
