--- a/src/less/hipline.less
+++ b/src/less/hipline.less
@@ -1,1 +1,56 @@
 @import "common";
+
+.hipline{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f2f6f9;
+}
+.main{
+  padding: @100 @30 @30;
+  overflow: hidden;
+  div{
+    float: left;
+  }
+  .word{
+    width: 4.3rem;
+    p{
+      font: @28 'Microsoft YaHei';
+      color: #8fa0af;
+    }
+    .hiplineW{
+      padding-top: @70;
+      span{
+        font-weight: bold;
+        font-size: 0.45rem;
+        color: #5a6676;
+      }
+      input{
+        width: 1.7rem;
+        background: transparent;
+        border: transparent;
+        border-bottom: 2px solid #5a6676;
+        text-align: center;
+        font-size: 0.38rem;
+        color: #5a6676;
+
+      }
+    }
+  }
+  .img{
+    padding-left: @28;
+    width: 4.5rem;
+    img{
+      width: 100%;
+      height: auto;
+      display: block;
+      vertical-align: bottom;
+    }
+  }
+}
+
+.decoration{
+  margin: @20 0 0 @30;
+}
