--- a/src/less/shoulder.less
+++ b/src/less/shoulder.less
@@ -1,1 +1,49 @@
 @import "common";
+
+.shoulder{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f2f6f9;
+}
+.img{
+  padding-top: @10;
+  img{
+    display: block;
+    width: 4.73rem;
+    height: auto;
+    margin: 0 auto;
+  }
+}
+
+.word{
+  padding: @50 @30 @30;
+  p{
+    font: @28 'Microsoft YaHei';
+    color: #8fa0af;
+  }
+  .shoulderW{
+    padding-top: @40;
+    span{
+      font-weight: bold;
+      font-size: 0.45rem;
+      color: #5a6676;
+    }
+    input{
+      width: 1.7rem;
+      background: transparent;
+      border: transparent;
+      border-bottom: 2px solid #5a6676;
+      text-align: center;
+      font-size: 0.38rem;
+      color: #5a6676;
+
+    }
+  }
+}
+
+.decoration{
+  margin: 0 @30;
+}
