--- a/src/views/shoulder.html
+++ b/src/views/shoulder.html
@@ -5,6 +5,37 @@
     <title>慕思睡眠测试系统</title>
 </head>
 <body>
+    <div class="shoulder">
+        <div class="numStable">
+            <div class="num">
+                <p>05</p>
+            </div>
+            <div class="describe">
+                <h1>肩宽</h1>
+                <span>Shoulder Width</span>
+            </div>
+        </div>
+        
+        <div class="img">
+            <img src="../images/5-pic.png" alt="">
+        </div>
 
+        <div class="word">
+            <p>测量方法：将皮尺环绕胸部包含手臂部分，取最高点，与地面保持水平。</p>
+            <div class="shoulderW">
+                <span>肩宽：</span>
+                <input id="shoulderW" type="number">
+                <span>cm</span>
+            </div>
+        </div>
+
+        <div class="decoration">
+            <span>-----------------------</span>
+        </div>
+
+        <div id="footer"></div>
+    </div>
+<script src="/assets/commons.js"></script>
+<script src="/assets/shoulder.bundle.js"></script>
 </body>
 </html>
