--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>慕思睡眠测试系统</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
     <div class="index">
@@ -35,7 +35,5 @@
 
         <div id="footer"></div>
     </div>
-<script src="/assets/commons.js"></script>
-<script src="/assets/index.bundle.js"></script>
 </body>
 </html>
