--- a/src/less/report.less
+++ b/src/less/report.less
@@ -1,1 +1,16 @@
 @import "common";
+
+.report{
+  background-color: #f2f6f9;
+}
+.bigCircle{
+  width: 100%;
+  height: auto;
+  padding-top: @30;
+  text-align: center;
+  img{
+    display: inline-block;
+    width: auto;
+    height: 2.98rem;
+  }
+}
