--- a/src/views/report.html
+++ b/src/views/report.html
@@ -5,6 +5,48 @@
     <title>慕思睡眠测试系统</title>
 </head>
 <body>
+    <div class="report">
+        <div class="bigCircle">
+            <img src="../images/9-testreport.png" alt="">
+        </div>
 
+        <div id="userInfo">
+            <ul>
+                <li class="userImg">
+                    <img id="userImg">
+                    <span></span>
+                    <p>性别</p>
+                </li>
+                <li class="shape">
+                    <span></span><i>形</i>
+                    <p></p>
+                </li>
+                <li class="age">
+                    <span></span><i>岁</i>
+                    <p></p>
+                </li>
+                <li class="height">
+                    <span></span><i>cm</i>
+                    <p></p>
+                </li>
+                <li class="weight">
+                    <span></span><i>kg</i>
+                    <p></p>
+                </li>
+                <li class="shoulder">
+                    <span></span><i>cm</i>
+                    <p></p>
+                </li>
+                <li class="waistline">
+                    <span></span><i>cm</i>
+                    <p></p>
+                </li>
+                <li class="hipline">
+                    <span></span><i>cm</i>
+                    <p></p>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
