--- a/src/views/report.html
+++ b/src/views/report.html
@@ -19,33 +19,53 @@
                 </li>
                 <li class="shape">
                     <span></span><i>形</i>
-                    <p></p>
+                    <p>体型</p>
                 </li>
                 <li class="age">
                     <span></span><i>岁</i>
-                    <p></p>
+                    <p>年龄</p>
                 </li>
                 <li class="height">
                     <span></span><i>cm</i>
-                    <p></p>
+                    <p>身高</p>
                 </li>
                 <li class="weight">
                     <span></span><i>kg</i>
-                    <p></p>
+                    <p>体重</p>
                 </li>
                 <li class="shoulder">
                     <span></span><i>cm</i>
-                    <p></p>
+                    <p>肩宽</p>
                 </li>
                 <li class="waistline">
                     <span></span><i>cm</i>
-                    <p></p>
+                    <p>腰围</p>
                 </li>
                 <li class="hipline">
                     <span></span><i>cm</i>
-                    <p></p>
+                    <p>臀围</p>
                 </li>
             </ul>
+        </div>
+
+        <div class="chart">
+            <div class="top">
+                <div class="BMI">
+                    <img src="../images/9-board.png" alt="">
+                    <p>BMI</p>
+                </div>
+                <div id="BMI">
+
+                </div>
+            </div>
+            <div class="other">
+                <div id="left">
+
+                </div>
+                <div id="right">
+
+                </div>
+            </div>
         </div>
     </div>
 </body>
