--- a/src/views/report.html
+++ b/src/views/report.html
@@ -67,6 +67,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="bed">
+            <span>──</span><img src="../images/9-bed.png" alt=""><span>──</span>
+            <h1>合适您的床垫型号为</h1>
+        </div>
+
+        <div class="product">
+
+        </div>
     </div>
 </body>
 </html>
