--- a/src/less/report.less
+++ b/src/less/report.less
@@ -99,10 +99,34 @@
 }
 #left{
   float: left;
-  width: 49%;
-  border-right: 1px solid #e1e1e1;
+  width: 50%;
 }
 #right{
   float: left;
-  width: 50%;
+  width: 49.5%;
+  border-left: 1px solid #e1e1e1;
+}
+
+.bed{
+  width: 100%;
+  padding: @40 0 @70;
+  text-align: center;
+  span{
+    display: inline-block;
+    vertical-align: middle;
+    color: #74a0ef;
+  }
+  img{
+    display: inline-block;
+    vertical-align: middle;
+    width: @50;
+    height: @50;
+    margin: 0 @20;
+  }
+  h1{
+    margin-top: @10;
+    font-weight: normal;
+    font-size: @28;
+    color: #74a0ef;
+  }
 }
