--- a/src/views/report.html
+++ b/src/views/report.html
@@ -70,12 +70,24 @@
 
         <div class="bed">
             <span>──</span><img src="../images/9-bed.png" alt=""><span>──</span>
-            <h1>合适您的床垫型号为</h1>
+            <p>合适您的床垫型号为</p>
         </div>
 
         <div class="product">
-
+            <div class="module">
+                <p>DR-3122</p>
+            </div>
+            <img src="../images/4-foot.png" alt="">
+            <div id="next">
+                产品详情
+            </div>
         </div>
+
+        <div class="shop">
+            <span>──</span><img src="../images/9-bed.png" alt=""><span>──</span>
+            <p>慕思门店<span class="city">东莞市</span>分布图</p>
+        </div>
+
         <!-- 地图 -->
         <div id="main" class="map" style="width: 100%;height: 8rem"></div>
     </div>
