--- a/src/views/height.html
+++ b/src/views/height.html
@@ -15,7 +15,7 @@
                 <span>Height</span>
             </div>
         </div>
-
+        <img src="../images/3-body.png" alt="">
         <div class="word">
             <p>
                 测量方法： 赤脚两脚并拢站直，背靠墙站立，从头顶部到地面的高度即为我们需要的身高。
@@ -26,13 +26,9 @@
                 <span>cm</span>
             </div>
         </div>
-
-
         <div class="decoration">
             <span>-----------------------</span>
         </div>
-
-        <div id="footer"></div>
     </div>
 </body>
 </html>
