--- a/src/less/common.less
+++ b/src/less/common.less
@@ -21,7 +21,15 @@
   src: url('../fonts/TwCenMTCondensed.ttf') format('truetype');
 }
 
-
+body{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/1-bg.png")no-repeat center;
+  background-size: cover;
+}
 .numStable{
   position: relative;
   padding: @60 @30 0 @30;
@@ -58,9 +66,4 @@
     color: #dadcde;
     letter-spacing: 0.05rem;
   }
-}
-
-#footer{
-  position: relative;
-  padding: 2rem 0 2.5rem;
 }
