--- a/src/less/height.less
+++ b/src/less/height.less
@@ -1,13 +1,14 @@
 @import "common";
-
 .height{
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background: url("../images/3-body.png")no-repeat 90% 34%;
-  background-size: 40% auto;
+  height: auto;
+  >img{
+    position: absolute;
+    top: 15%;
+    right: 0.35rem;
+    width: 33.6%;
+    height: auto;
+  }
 }
 .word{
   padding: @100 0 0 @30;
