--- a/src/less/hipline.less
+++ b/src/less/hipline.less
@@ -1,12 +1,7 @@
 @import "common";
-
 .hipline{
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #f2f6f9;
+  height: auto;
 }
 .main{
   padding: @100 @30 @30;
