--- a/src/less/shoulder.less
+++ b/src/less/shoulder.less
@@ -1,12 +1,8 @@
 @import "common";
 
 .shoulder{
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #f2f6f9;
+  height: auto;
 }
 .img{
   padding-top: @10;
