--- a/src/less/waistline.less
+++ b/src/less/waistline.less
@@ -1,12 +1,8 @@
 @import "common";
 
 .waistline{
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #f2f6f9;
+  height: auto;
 }
 .main{
   padding: @100 @30 @30;
