--- a/src/less/loginModule.less
+++ b/src/less/loginModule.less
@@ -74,9 +74,10 @@
   display: block;
   top: 0;
   right: 0;
-  padding: 0 0.15rem;
+  width: 1.8rem;
   height: 0.8rem;
   line-height: 0.8rem;
+  text-align: center;
   border: 1px solid #999;
   margin-top: 0.13rem;
   border-radius: 0.15rem;
