modify: indexCss--img overflow/reportCss--list diversification/logIn module callback; add: BIM-Index-Color module--dynamic calculate the BMI and Index and the Color

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -53,27 +53,28 @@
       span{
         display: inline-block;
         vertical-align: bottom;
-        width: 0.8rem;
-        height: 0.8rem;
+        width: 0.4rem;
+        height: 0.4rem;
+        margin-bottom: 0.12rem;
         background-size: 0.4rem;
       }
     }
     .left{
       float: left;
       .noneSpan1{
-        background: url("../images/1-index-circle1.png")no-repeat center 85%;
+        background: url("../images/1-index-circle1.png")no-repeat center;
       }
       .check1{
-        background: url("../images/1-index-circle1-yes.png")no-repeat center 85%;
+        background: url("../images/1-index-circle1-yes.png")no-repeat center;
       }
     }
     .right{
       float: right;
       .noneSpan2{
-        background: url("../images/1-index-circle2.png")no-repeat center 85%;
+        background: url("../images/1-index-circle2.png")no-repeat center;
       }
       .check2{
-        background: url("../images/1-index-circle2-yes.png")no-repeat center 85%;
+        background: url("../images/1-index-circle2-yes.png")no-repeat center;
       }
     }
   }
