--- a/src/views/report.html
+++ b/src/views/report.html
@@ -14,11 +14,12 @@
             <ul>
                 <li class="userImg">
                     <img id="userImg">
-                    <span></span>
                     <p>性别</p>
                 </li>
                 <li class="shape">
-                    <span></span><i>形</i>
+                    <div>
+                        <span></span><i>形</i>
+                    </div>
                     <p>体型</p>
                 </li>
                 <li class="age">
