modify and add>>> modify: index--resolving img disappear//hipline--submit and the 'loading...'//report--list style change || add: login module--(checkCode) click event do bind and unbind,resolving send repeat

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -55,8 +55,8 @@
         vertical-align: bottom;
         width: 0.4rem;
         height: 0.4rem;
-        margin-bottom: 0.12rem;
-        background-size: 0.4rem;
+        margin-bottom: 0.07rem;
+        background-size: 0.4rem !important;
       }
     }
     .left{
