--- a/src/less/report.less
+++ b/src/less/report.less
@@ -35,6 +35,7 @@
         width: @70;
         height: @70;
         margin-top: 0.123rem;
+        margin-bottom: 0.05rem;
       }
       span{
         display: inline-block;
@@ -67,7 +68,7 @@
       div{
         position: absolute;
         width: 100%;
-        bottom: 1.42rem;
+        bottom: 1.38rem;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -96,7 +97,7 @@
   .top{
     overflow: hidden;
     padding: 0.3rem 0.25rem;
-    border: 1px solid #e1e1e1;
+    border-bottom: 1px solid #e1e1e1;
     >div{
       float: left;
     }
