添加下外边距

--- a/src/views/report.html
+++ b/src/views/report.html
@@ -90,7 +90,7 @@
         </div>
 
         <!-- 地图 -->
-        <div id="main" class="map" style="width: 100%;height: 8rem"></div>
+        <div id="main" class="map" style="width: 100%;height: 8rem;margin-bottom: 1rem;"></div>
     </div>
 
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=A4749739227af1618f7b0d1b588c0e85"></script>
