modify: report--transform need compatible

--- a/src/less/distribution.less
+++ b/src/less/distribution.less
@@ -69,7 +69,15 @@
   width: 1.2rem;
   height: 0.2rem;
   background-size: auto 100% !important;
-  transform-origin: 8px 8px;
+  -webkit-transform-origin: 0.107rem 0.107rem;
+  -moz-transform-origin: 0.107rem 0.107rem;
+  -ms-transform-origin: 0.107rem 0.107rem;
+  -o-transform-origin: 0.107rem 0.107rem;
+  transform-origin: 0.107rem 0.107rem;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transform: rotate(0deg);
 }
 
