--- a/src/less/indicate.less
+++ b/src/less/indicate.less
@@ -22,8 +22,9 @@
   }
 }
 .indicateP{
+  width: 100%;
   padding-top: 0.1rem;
-  margin-left: -0.1rem;
+  left: -0.1rem;
   img{
     width: 0.2rem;
   }
