--- a/src/views/report.html
+++ b/src/views/report.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>慕思睡眠测试系统</title>
 </head>
 <body>
