--- a/src/less/loginModule.less
+++ b/src/less/loginModule.less
@@ -71,7 +71,7 @@
 }
 #codeSpan{
   position: absolute;
-  display: block;
+  display: inline-block;
   top: 0;
   right: 0;
   width: 1.8rem;
@@ -79,7 +79,7 @@
   line-height: 0.8rem;
   text-align: center;
   border: 1px solid #999;
-  margin-top: 0.13rem;
+  margin-top: 0.115rem;
   border-radius: 0.15rem;
   background: #fff;
   font-size: 0.29rem;
