--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>慕思睡眠侧测试系统</title>
+    <title>慕思睡眠测试系统</title>
 </head>
 <body>
     <div class="index">
