modify: all page input style//report list

--- a/src/less/waistline.less
+++ b/src/less/waistline.less
@@ -31,7 +31,8 @@
         text-align: center;
         font-size: 0.38rem;
         color: #5a6676;
-
+        -webkit-appearance: none;
+        border-radius: 0;
       }
     }
   }
