--- a/src/views/report.html
+++ b/src/views/report.html
@@ -14,7 +14,7 @@
         <div id="userInfo">
             <ul>
                 <li class="userImg">
-                    <img id="userImg">
+                    <div><img id="userImg"></div>
                     <p>性别</p>
                 </li>
                 <li class="shape">
@@ -24,27 +24,27 @@
                     <p>体型</p>
                 </li>
                 <li class="age">
-                    <span></span><i>岁</i>
+                    <div><span></span><i>岁</i></div>
                     <p>年龄</p>
                 </li>
                 <li class="height">
-                    <span></span><i>cm</i>
+                    <div><span></span><i>cm</i></div>
                     <p>身高</p>
                 </li>
                 <li class="weight">
-                    <span></span><i>kg</i>
+                    <div><span></span><i>kg</i></div>
                     <p>体重</p>
                 </li>
                 <li class="shoulder">
-                    <span></span><i>cm</i>
+                    <div><span></span><i>cm</i></div>
                     <p>肩宽</p>
                 </li>
                 <li class="waistline">
-                    <span></span><i>cm</i>
+                    <div><span></span><i>cm</i></div>
                     <p>腰围</p>
                 </li>
                 <li class="hipline">
-                    <span></span><i>cm</i>
+                    <div><span></span><i>cm</i></div>
                     <p>臀围</p>
                 </li>
             </ul>
