--- a/src/views/waistline.html
+++ b/src/views/waistline.html
@@ -17,18 +17,7 @@
         </div>
         <div class="main">
             <div class="word">
-                <p>
-                    测量方法：双脚并拢站
-                    直，两臂自然下垂，不
-                    要收腹，呼吸保持平
-                    稳，皮尺围绕腰最细的
-                    部位（髋骨上，肋骨下
-                    最窄的部位），水平测
-                    量一周，让皮尺和身体
-                    之间有一个手指的位
-                    置，量出的尺寸即为腰
-                    围尺寸。
-                </p>
+                <p>测量方法：双脚并拢站直，两臂自然下垂，不要收腹，呼吸保持平稳，皮尺围绕腰最细的部位（髋骨上，肋骨下最窄的部位），水平测量一周，让皮尺和身体之间有一个手指的位置，量出的尺寸即为腰围尺寸。</p>
                 <div class="waistlineW">
                     <span>腰围：</span>
                     <input id="waistlineW" type="number">
