--- a/src/less/height.less
+++ b/src/less/height.less
@@ -33,7 +33,8 @@
       text-align: center;
       font-size: 0.38rem;
       color: #5a6676;
-
+      -webkit-appearance: none;
+      border-radius: 0;
     }
   }
 }
