--- a/src/less/report.less
+++ b/src/less/report.less
@@ -30,31 +30,35 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      img{
-        display: inline-block;
-        width: @70;
-        height: @70;
-        margin-top: 0.123rem;
-        margin-bottom: 0.05rem;
-      }
-      span{
-        display: inline-block;
-        vertical-align: bottom;
-        font-family: CN;
-        font-weight: bold;
-        font-size: @80;
-        color: #5a6676;
-        letter-spacing: 3px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-      i{
-        display: inline-block;
-        vertical-align: bottom;
-        font-style: normal;
-        font-size: @32;
-        color: #8795a3;
+      div{
+        height: 1.2rem;
+        line-height: 1.2rem;
+        img{
+          display: inline-block;
+          width: @70;
+          height: @70;
+          margin-top: 0.123rem;
+          margin-bottom: 0.05rem;
+        }
+        span{
+          display: inline-block;
+          vertical-align: -48%;
+          font-family: CN;
+          font-weight: bold;
+          font-size: @80;
+          color: #5a6676;
+          letter-spacing: 3px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+        i{
+          display: inline-block;
+          vertical-align: -30%;
+          font-style: normal;
+          font-size: @32;
+          color: #8795a3;
+        }
       }
       p{
         padding-top: 0.05rem;
@@ -64,24 +68,16 @@
       }
     }
     .shape{
-      position: relative;
       div{
-        position: absolute;
-        width: 100%;
-        bottom: 1.38rem;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
         span{
-          font-family: "Microsoft YaHei";
+          font-family: 'Microsoft YaHei';
           font-size: 0.6rem;
           color: #8795a3;
+          vertical-align: -62%;
         }
-      }
-      p{
-        position: absolute;
-        width: 100%;
-        bottom: 0.72rem;
+        i{
+          vertical-align: -29%;
+        }
       }
     }
   }
