--- a/src/less/shoulder.less
+++ b/src/less/shoulder.less
@@ -35,7 +35,8 @@
       text-align: center;
       font-size: 0.38rem;
       color: #5a6676;
-
+      -webkit-appearance: none;
+      border-radius: 0;
     }
   }
 }
