--- a/src/less/weight.less
+++ b/src/less/weight.less
@@ -76,7 +76,8 @@
         text-align: center;
         font-size: 0.38rem;
         color: #5a6676;
-
+        -webkit-appearance: none;
+        border-radius: 0;
       }
     }
   }
