--- a/src/views/height.html
+++ b/src/views/height.html
@@ -17,9 +17,7 @@
         </div>
         <img src="../images/3-body.png" alt="">
         <div class="word">
-            <p>
-                测量方法： 赤脚两脚并拢站直，背靠墙站立，从头顶部到地面的高度即为我们需要的身高。
-            </p>
+            <p>测量方法： 赤脚两脚并拢站直，背靠墙站立，从头顶部到地面的高度即为我们需要的身高。</p>
             <div class="bodyH">
                 <span>身高：</span>
                 <input id="bodyH" type="number">
