--- a/src/views/hipline.html
+++ b/src/views/hipline.html
@@ -17,16 +17,7 @@
         </div>
         <div class="main">
             <div class="word">
-                <p>
-                    测量方法：双脚并拢站
-                    直，两臂自然下垂，不
-                    要收腹，呼吸保持平
-                    稳，皮尺围绕臀部最丰
-                    满处水平测量一周，松
-                    紧程度让皮尺能轻松转
-                    动为适宜，量出的尺寸
-                    即为臀围尺寸。
-                </p>
+                <p>测量方法：双脚并拢站直，两臂自然下垂，不要收腹，呼吸保持平稳，皮尺围绕臀部最丰满处水平测量一周，松紧程度让皮尺能轻松转动为适宜，量出的尺寸即为臀围尺寸。</p>
                 <div class="hiplineW">
                     <span>臀围：</span>
                     <input id="hiplineW" type="number">
