--- a/src/less/common.less
+++ b/src/less/common.less
@@ -25,10 +25,12 @@ body{
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background: url("../images/1-bg.png")no-repeat center;
   background-size: cover;
+  overflow: scroll;
 }
 .numStable{
   position: relative;
