'choseModule-change//userInfoList-change'

--- a/src/less/report.less
+++ b/src/less/report.less
@@ -32,7 +32,7 @@
       text-overflow: ellipsis;
       div{
         height: 1.2rem;
-        line-height: 1.2rem;
+        line-height: 1.3rem;
         img{
           display: inline-block;
           width: @70;
@@ -41,8 +41,8 @@
           margin-bottom: 0.05rem;
         }
         span{
-          display: inline-block;
-          vertical-align: -48%;
+          //display: inline-block;
+          //vertical-align: -48%;
           font-family: CN;
           font-weight: bold;
           font-size: @80;
@@ -53,8 +53,8 @@
           white-space: nowrap;
         }
         i{
-          display: inline-block;
-          vertical-align: -30%;
+          //display: inline-block;
+          //vertical-align: -30%;
           font-style: normal;
           font-size: @32;
           color: #8795a3;
@@ -69,14 +69,12 @@
     }
     .shape{
       div{
+        line-height: 1.65rem;
         span{
           font-family: 'Microsoft YaHei';
           font-size: 0.6rem;
           color: #8795a3;
-          vertical-align: -62%;
-        }
-        i{
-          vertical-align: -29%;
+          //vertical-align: -62%;
         }
       }
     }
