'index-and-color-calculate-change-and-img-modify'

--- a/src/views/report.html
+++ b/src/views/report.html
@@ -79,7 +79,7 @@
             <div class="module">
                 <p>DR-3122</p>
             </div>
-            <img src="../images/4-foot.png" alt="">
+            <img src="../images/bed.png" alt="">
             <div id="next">
                 产品详情
             </div>
