--- a/src/less/common.less
+++ b/src/less/common.less
@@ -12,14 +12,16 @@
 @100: 1.33rem;
 @120: 1.6rem;
 
+
 @font-face {
-  font-family: CN;
+  font-family: CN;  //设置全局可用字体CN
   src: url('../fonts/Haettenschweiler.ttf') format('truetype');
 }
 @font-face {
-  font-family: ZH;
+  font-family: ZH;  //设置全局可用字体ZH
   src: url('../fonts/TwCenMTCondensed.ttf') format('truetype');
 }
+
 
 body{
   position: absolute;
