--- a/src/views/hipline.html
+++ b/src/views/hipline.html
@@ -11,7 +11,7 @@
                 <p>07</p>
             </div>
             <div class="describe">
-                <h1>臀围</h1>
+                <h1>臀宽</h1>
                 <span>Hipline</span>
             </div>
         </div>
@@ -19,7 +19,7 @@
             <div class="word">
                 <p>测量方法：双脚并拢站直，两臂自然下垂，不要收腹，呼吸保持平稳，皮尺围绕臀部最丰满处水平测量一周，松紧程度让皮尺能轻松转动为适宜，量出的尺寸即为臀围尺寸。</p>
                 <div class="hiplineW">
-                    <span>臀围：</span>
+                    <span>臀宽：</span>
                     <input id="hiplineW" type="number">
                     <span>cm</span>
                 </div>
