modify: resolve bodyShape undefine and checked the input value

--- a/src/views/hipline.html
+++ b/src/views/hipline.html
@@ -20,7 +20,7 @@
                 <p>测量方法：双脚并拢站直，两臂自然下垂，不要收腹，呼吸保持平稳，皮尺围绕臀部最丰满处水平测量一周，松紧程度让皮尺能轻松转动为适宜，量出的尺寸即为臀围尺寸。</p>
                 <div class="hiplineW">
                     <span>臀宽：</span>
-                    <input id="hiplineW" type="number">
+                    <input id="hiplineW" type="number" placeholder="25~150">
                     <span>cm</span>
                 </div>
             </div>
