--- a/src/views/male-body.html
+++ b/src/views/male-body.html
@@ -32,7 +32,7 @@
             </div>
             <div class="age">
                 <span>年龄：</span>
-                <input id="age" type="number">
+                <input id="age" type="number" placeholder="0~150">
                 <span>岁</span>
             </div>
         </div>
