--- a/src/views/shoulder.html
+++ b/src/views/shoulder.html
@@ -22,7 +22,7 @@
             <p>测量方法：将皮尺环绕胸部包含手臂部分，取最高点，与地面保持水平。</p>
             <div class="shoulderW">
                 <span>肩宽：</span>
-                <input id="shoulderW" type="number">
+                <input id="shoulderW" type="number" placeholder="25~65">
                 <span>cm</span>
             </div>
         </div>
