--- a/src/views/waistline.html
+++ b/src/views/waistline.html
@@ -20,7 +20,7 @@
                 <p>测量方法：双脚并拢站直，两臂自然下垂，不要收腹，呼吸保持平稳，皮尺围绕腰最细的部位（髋骨上，肋骨下最窄的部位），水平测量一周，让皮尺和身体之间有一个手指的位置，量出的尺寸即为腰围尺寸。</p>
                 <div class="waistlineW">
                     <span>腰围：</span>
-                    <input id="waistlineW" type="number">
+                    <input id="waistlineW" type="number" placeholder="15~200">
                     <span>cm</span>
                 </div>
             </div>
