--- a/src/views/weight.html
+++ b/src/views/weight.html
@@ -35,7 +35,7 @@
                 </ul>
                 <div class="bodyW">
                     <span>体重：</span>
-                    <input id="bodyW" type="number">
+                    <input id="bodyW" type="number" placeholder="5~200">
                     <span>kg</span>
                 </div>
             </div>
