--- a/src/views/detail.html
+++ b/src/views/detail.html
@@ -2,55 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>慕思睡眠测试系统</title>
+    <title>产品详情</title>
 </head>
 <body>
     <div class="detail">
-        <div class="product">
-            <img src="../images/4-foot.png" alt="">
-        </div>
-
-        <div class="info">
-            <div class="head">
-                <div class="left">
-                    DR-1033
+        <div class="contain">
+            <div class="topContain">
+                <div class="productImg">
+                    <img src="../images/pro1011.png" alt="产品图">
                 </div>
-                <div class="right">
-                    <h1>￥22440</h1>
-                    <p>规格：180cm*200cm*30cm</p>
+                <img src="../images/LOGO.png" alt="logo">
+                <div class="levelImg">
+                    <img src="../images/5-line.png" alt="星级图">
                 </div>
             </div>
-        </div>
-        <div class="scroll">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="../images/4-foot.png" alt="">
-                        <p>高档梭织面料</p>
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="../images/4-foot.png" alt="">
-                        <p>天然羊毛</p>
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="../images/4-foot.png" alt="">
-                        <p>天然羊毛弹簧</p>
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="../images/4-foot.png" alt="">
-                        <p>乳胶乳胶</p>
-                    </div>
+            <div class="titleText">
+                <div class="title">
+                    <H1>臻品系列</H1> <p>. MCD2-1033</p> <span>(原DR-1033)</span>
+                    <div class="littleLine"></div>
                 </div>
             </div>
-        </div>
-        <div class="word">
-            <p>
-                金属材料是指金属元素或以金属元素为主构成的具有金属特性的材料的统称。
-                包括纯金属、合金、金属材料金属间化合物和特种金属材料等。
-                许多机械零件和工程构件，是承受交变载荷工作的。在交变载荷的作用下，
-                虽然应力水平低于材料的屈服极限，但经过长时间的应力反复循环作用以后，
-                也会发生突然脆性断裂。
-            </p>
+            <div class="midContain">
+                <h1>BOUTIQUE SERIES</h1>
+                <ul>
+                    <li><h1>名称</h1> <h2>NAME</h2> <h3>塔希提 Tahiti</h3></li>
+                    <li><h1>尺寸</h1> <h2>SIZE</h2> <h3>180*200*34CM</h3></li>
+                    <li><h1>系列</h1> <h2>SERIES</h2> <h3>臻品系列</h3></li>
+                    <li><h1>售价</h1> <h2>PRICE</h2> <h3>25000</h3></li>
+                </ul>
+            </div>
+            <div class="footContain">
+                <ul>
+                    <li>
+                        <h1>五区袋装独立筒弹簧</h1>
+                        <p>按照人体的五大部位，分布不同密度，不同弹性的独立筒袋装弹簧，不仅能为身体的每个部位打造专属的支撑力，让承托更加细腻，同时，　兼有独立筒的低噪音功能，每晚尽享无干扰睡眠。</p>
+                    </li>
+                    <li>
+                        <h1>乳胶</h1>
+                        <p>精选的乳胶材质，不仅拥有乳胶特有的香气，能够防螨抑菌，还能够提供充分的弹性支撑，柔软的触感，让睡眠更加舒适。</p>
+                    </li>
+                    <li>
+                        <h1>羊毛</h1>
+                        <p>床垫舒适层精选优质羊毛材质，独有的保温功效，让睡眠过程中远离寒冷，感受温和的睡眠环境。</p>
+                    </li>
+                    <li>
+                        <h1>凝胶记忆棉</h1>
+                        <p>床垫的舒适层中采用了凝胶记忆棉，在传统记忆棉上添加凝胶粒子，具有慢回弹和记忆功能的材质，不仅分散了身体的各接触部位的压力，　并且使得床垫的贴合度更强，记忆人体的体重和曲线，达到充分适配人体睡眠的作用。</p>
+                    </li>
+                    <li>
+                        <h1>波浪绵</h1>
+                        <p>表面呈山峰波浪状，手感舒适，能均匀分散人体重量；透气性好，置于舒适层中协助释放热量及湿度，保持睡眠干爽；独特的多点按摩功　　效，并具有阻隔噪音的性能。</p>
+                    </li>
+                    <li>
+                        <h1>高档梭织面料</h1>
+                        <p>触感柔和、清爽贴身</p>
+                    </li>
+                    <li>
+                        <h1>床垫可搭配四种软硬度</h1>
+                        <p>( 加硬、硬、适中、软）来满足不同客户睡眠需求</p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
