change detail img

--- a/src/views/detail.html
+++ b/src/views/detail.html
@@ -9,16 +9,16 @@
         <div class="contain">
             <div class="topContain">
                 <div class="productImg">
-                    <img src="../images/pro1011.png" alt="产品图">
+                    <img alt="产品图">
                 </div>
                 <img src="../images/LOGO.png" alt="logo">
                 <div class="levelImg">
-                    <img src="../images/5-line.png" alt="星级图">
+                    <img alt="星级图">
                 </div>
             </div>
             <div class="titleText">
                 <div class="title">
-                    <H1>臻品系列</H1> <p>. MCD2-1033</p> <span>(原DR-1033)</span>
+                    <H1>臻品系列</H1> <p></p> <span>(原DR-1033)</span>
                     <div class="littleLine"></div>
                 </div>
             </div>
