--- a/src/less/detail.less
+++ b/src/less/detail.less
@@ -6,6 +6,7 @@
     position: relative;
     width: 100%;
     padding: 1.6rem 0 0.533rem;
+    background: url("../images/topBack.png") top center;
     .productImg{
       width: 8.35rem;
       margin: 0 auto;
